# devtools-release-notifier

./: .gitattributes  .gitignore  CLAUDE.md  README.md  config.yml  main.py  pyproject.toml
.github/scripts/: extract_claude_response.py  send_to_discord.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-docs.yml  notifier.yml
cache/: claude_code_version.json  dia_browser_version.json  ghostty_version.json  raycast_version.json  zed_editor_version.json
devtools_release_notifier/: discord_notifier.py  notifier.py  sources.py  templates.py
devtools_release_notifier/models/: __init__.py  config.py  discord.py  output.py  release.py
devtools_release_notifier/notifiers/: __init__.py
devtools_release_notifier/scripts/: __init__.py  extract_claude_response.py  send_to_discord.py
devtools_release_notifier/sources/: __init__.py  base.py  changelog.py  github_commits.py  github_releases.py  homebrew_cask.py
docs/: CONTRIBUTING.md  README.md  architecture.md  class-diagram.md  data-flow.md  sequence-diagram.md
docs/architecture/: sequence-diagram.md
rspress/: package.json  pnpm-lock.yaml  rspress.config.ts
rspress/docs/: architecture.md  data-flow.md  index.md
rspress/docs/architecture/: _meta.json  class-diagram.md  data-flow.md  index.md
rspress/docs/releases/: _meta.json  index.md
rspress/docs/releases/claude-code/: 2025-11-18.md  2025-11-19.md  2025-11-21.md  2025-11-22.md  2025-12-06.md  2025-12-08.md  2025-12-16.md  2025-12-17.md  2025-12-18.md  2025-12-19.md  2025-12-20.md  2026-01-09.md  2026-01-10.md  2026-01-11.md  2026-01-13.md  2026-01-14.md  2026-01-16.md  2026-01-17.md  2026-01-18.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-24.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-04.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-10.md  2026-02-11.md  2026-02-13.md  2026-02-14.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  (+79 more)
rspress/docs/releases/dia-browser/: index.md
rspress/docs/releases/ghostty/: 2025-12-27.md  2026-03-10.md  2026-03-11.md  2026-03-14.md  2026-03-15.md  index.md
rspress/docs/releases/raycast/: 2025-12-15.md  2025-12-17.md  2025-12-19.md  2026-01-22.md  2026-01-23.md  2026-02-03.md  2026-02-07.md  2026-02-12.md  2026-02-27.md  2026-03-03.md  2026-03-11.md  2026-03-17.md  2026-03-24.md  2026-04-10.md  2026-04-22.md  2026-04-29.md  2026-04-30.md  2026-05-09.md  2026-05-15.md  2026-05-21.md  2026-05-29.md  index.md
rspress/docs/releases/zed-editor/: 2025-11-16.md  2025-11-17.md  2025-11-18.md  2025-11-19.md  2025-11-20.md  2025-11-21.md  2025-11-22.md  2025-11-23.md  2025-11-24.md  2025-11-25.md  2025-11-26.md  2025-11-27.md  2025-11-29.md  2025-11-30.md  2025-12-01.md  2025-12-02.md  2025-12-03.md  2025-12-04.md  2025-12-05.md  2025-12-07.md  2025-12-08.md  2025-12-10.md  2025-12-11.md  2025-12-12.md  2025-12-13.md  2025-12-14.md  2025-12-15.md  2025-12-16.md  2025-12-17.md  2025-12-18.md  2025-12-19.md  2025-12-20.md  2025-12-21.md  2025-12-22.md  2025-12-23.md  2025-12-24.md  2025-12-26.md  2025-12-27.md  2025-12-28.md  2025-12-31.md  (+150 more)
rspress/scripts/: sync-docs.sh
tests/: test_devtools_release_notifier.py  test_discord_notifier.py  test_notifier.py  test_sources.py  test_templates.py
tests/models/: test_config.py  test_discord.py  test_output.py  test_release.py
tests/scripts/: __init__.py  test_extract_claude_response.py  test_send_to_discord.py
