[project]
name = "devtools-release-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.3",
]

[project.scripts]
devtools-notifier = "devtools_release_notifier.notifier:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["devtools_release_notifier", "devtools_release_notifier.*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.pytest.ini_options]
addopts = "--cov=devtools_release_notifier"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
exclude = ["**/node_modules", "**/__pycache__", "venv*", "package*"]

[tool.mypy]
exclude = ["build/"]
plugins = ["pydantic.mypy"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["feedparser", "feedparser.*", "yaml", "yaml.*"]
ignore_missing_imports = true
