[project]
name = "devtools-release-notifier"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.3",
]

[project.scripts]
devtools-notifier = "devtools_release_notifier.notifier:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["devtools_release_notifier", "devtools_release_notifier.*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.pytest.ini_options]
addopts = "--cov=devtools_release_notifier"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
exclude = ["**/node_modules", "**/__pycache__", "venv*", "package*"]

# Enable recommended rule sets
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "I",      # isort
    "C90",    # mccabe complexity
    "PLR",    # Pylint refactoring
]

# Ignore rules that are too strict or not applicable for this project
ignore = [
    # Exception handling
    "BLE001",  # Blind exception catch - needed for top-level error handling
    "EM101",   # Exception string literals - acceptable for small projects
    "EM102",   # Exception f-string literals - acceptable for small projects

    # Boolean arguments
    "FBT001",  # Boolean positional arg - clear names like no_notify are fine
    "FBT002",  # Boolean default arg - same as above

    # Type checking
    "TC001",   # Type checking block - imports needed at runtime
    "TC003",   # Type checking block - same as above

    # Magic values
    "PLR2004", # Magic value comparison - use constants instead (existing rule)
]

# Complexity thresholds
[tool.ruff.lint.mccabe]
max-complexity = 10  # Standard threshold to catch overly complex functions

[tool.ruff.lint.pylint]
max-args = 8          # Relaxed from default 5
max-branches = 15     # Standard threshold for branch complexity
max-statements = 50   # Standard threshold for statement count
max-returns = 6       # Default threshold

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # Allow long lines in test files (e.g., long JSON strings)

[tool.mypy]
exclude = ["build/"]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["misc"]  # Disable until mypy supports PEP 750 t-strings

[[tool.mypy.overrides]]
module = ["feedparser", "feedparser.*", "yaml", "yaml.*"]
ignore_missing_imports = true
